--- a/products-4.html
+++ b/products-4.html
@@ -33,95 +33,69 @@
 		
 		<div class="wrapper">
 			<div class="products">
-                <h1>All Products</h1>
+                <h1>Skincare Products</h1>
+                <p class="subheading">Products for sensitive skin</p>
 
                 <div class="container">
                     <!-- Each product-box div is a product, but this row specifically
                     has a thicker top box line -->
                     <div class="top-row">
                         <div class="product-box" id="first">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.nashilab.co.nz/products/krave-beauty-matcha-hemp-hydrating-cleanser"><img src="images/sensitive/kb_matchacleanser.jpg"></a></div>
+                            <a class="h2" href="https://www.nashilab.co.nz/products/krave-beauty-matcha-hemp-hydrating-cleanser">Krave Beauty Matcha Hemp Cleanser</a>
+                            <p>$38 NZD</p>
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                        </div>
-
-                        <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.nashilab.co.nz/products/krave-beauty-great-barrier-relief"><img src="images/sensitive/kb_greatbarrier_large.jpg"></a></div>
+                            <a class="h2" href="https://www.nashilab.co.nz/products/krave-beauty-great-barrier-relief">Krave Beauty Great Barrier Relief</a>
+                            <p>$68 NZD</p>
 
                         </div>
 
                         <div class="product-box">
-                            <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                            <div class="image"><a href="https://www.yesstyle.com/en/iunik-tea-tree-relief-serum-50ml-50ml/info.html/pid.1064305739"><img src="images/sensitive/iunik_reliefserum.jpg"></a></div>
+                            <a class="h2" href="https://www.yesstyle.com/en/iunik-tea-tree-relief-serum-50ml-50ml/info.html/pid.1064305739">iUnik Tea Tree Relief Serum</a>
+                            <p>$27.20 NZD</p>
+
+                        </div>
+
+                        <div class="product-box">
+                            <div class="image"><a href="https://www.sephora.nz/products/youth-to-the-people-adaptogen-deep-moisture-cream?q="><img src="images/sensitive/yttp_moisturecream.jpg"></a></div>
+                            <a class="h2" href="https://www.sephora.nz/products/youth-to-the-people-adaptogen-deep-moisture-cream?q=">Youth To The People Adaptogen Moisture Cream</a>
+                            <p>$31 NZD</p>
 
                         </div>
                     </div>
 
                     <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.yesstyle.com/en/iunik-centella-calming-gel-cream-60ml-60ml/info.html/pid.1066340839"><img src="images/sensitive/iunik_gelcream.png"></a></div>
+                            <a class="h2" href="https://www.yesstyle.com/en/iunik-centella-calming-gel-cream-60ml-60ml/info.html/pid.1066340839">iUnik Centella Calming Gel Cream</a>
+                            <p>$24.70 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://amp.ladybonita.co.nz/products/purito-centella-green-level-unscented-sun-spf50-pa"><img src="images/sensitive/purito_spf_large.jpg"></a></div>
+                            <a class="h2" href="https://amp.ladybonita.co.nz/products/purito-centella-green-level-unscented-sun-spf50-pa">Purito Centella Unscented SPF 50</a>
+                            <p>$28.99 NZD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://evenprime.co/products/evenprime-moisturizer"><img src="images/sensitive/ep_dailymoisturiser.jpg"></a></div>
+                            <a class="h2" href="https://evenprime.co/products/evenprime-moisturizer">Evenprime Daily Moisturizer</a>
+                            <p>$32 USD</p>
 
                     </div>
 
                     <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
+                        <div class="image"><a href="https://www.meccabeauty.co.nz/glow-recipe/avocado-ceramide-recovery-serum/I-049106.html#q=Glow%2BRecipe&start=1"><img src="images/sensitive/gr_recoveryserum.jpg"></a></div>
+                            <a class="h2" href="https://www.meccabeauty.co.nz/glow-recipe/avocado-ceramide-recovery-serum/I-049106.html#q=Glow%2BRecipe&start=1">Glow Recipe Avocado Recovery Serum</a>
+                            <p>$67 NZD</p>
 
                     </div>
 
-                    <div class="product-box" id="first">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                            <a class="h2" href="#">Product name</a>
-                            <p>Price</p>
-
-                    </div>
-
-                    <div class="product-box">
-                        <div class="image"><a href="#"><img src="placeholder.png"></a></div>
-                        <a class="h2" href="#">Product name</a>
-                        <p>Price</p>
-
-                    </div>
                 </div> 
 
                 <div class="nav-buttons">
