--- a/articles-1.html
+++ b/articles-1.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>All Articles</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -39,7 +43,7 @@
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles about common skin questions</p>
 				<div class="image-first">
-					<a href="fungal-acne.html"><img src="images/fungal_acne.jpg"></a>
+					<a href="fungal-acne.html"><img src="images/fungal_acne.jpg" alt="Forehead with fungal acne"></a>
 				</div>
 				<div class="title">
 					<a href="fungal-acne.html" class="first">What is Fungal Acne? (And how to treat it)</a>
@@ -47,7 +51,7 @@
 				</div>
 
 				<div class="image">
-					<a href="clear-acne.html"><img src="images/acne.png"></a>
+					<a href="clear-acne.html"><img src="images/acne.png" alt="Lady covering half her face with acne"></a>
 				</div>
 				<div class="title">
 					<a href="clear-acne.html">The Best Products for Clearing Acne</a>
@@ -57,7 +61,7 @@
 				<p class="subheading">Read articles dedicated to oily skin</p>
 
 				<div class="image-first">
-					<a href="clear-oily-skin.html"><img src="images/oily/clear-oily-skin.jpg"></a>
+					<a href="clear-oily-skin.html"><img src="images/oily/clear-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></a>
 					
 				</div>
 				<div class="title">
@@ -66,7 +70,7 @@
 				</div>
 
 				<div class="image">
-					<a href="moisturising-oily-skin.html"><img src="images/oily/moisturising-oily-skin.jpg"></a>
+					<a href="moisturising-oily-skin.html"><img src="images/oily/moisturising-oily-skin.jpg" alt="Moisturiser spread on a pink background"></a>
 					
 				</div>
 				<div class="title">
