--- a/articles-2.html
+++ b/articles-2.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Dry Skin Articles</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -39,7 +43,7 @@
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles dedicated to dry skin</p>
 				<div class="image-first">
-					<a href="dehydrated-vs-dry.html"><img src="images/dry/dehydrated-vs-dry.jpg"></a>
+					<a href="dehydrated-vs-dry.html"><img src="images/dry/dehydrated-vs-dry.jpg" alt="Half of a person's face with cracked mint coloured face mask"></a>
 				</div>
 				<div class="title">
 					<a href="dehydrated-vs-dry.html" class="first">Dehydrated vs Dry Skin (And how to treat dehydrated skin)</a>
@@ -47,7 +51,7 @@
 				</div>
 
 				<div class="image">
-					<a href="help-dry-skin.html"><img src="images/dry/help-dry-skin.jpg"></a>
+					<a href="help-dry-skin.html"><img src="images/dry/help-dry-skin.jpg" alt="Unlabelled skincare products with a flower and bar of soap"></a>
 					
 				</div>
 				<div class="title">
