--- a/articles-3.html
+++ b/articles-3.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Combo Skin Articles</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -39,7 +43,7 @@
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles dedicated to combo skin</p>
 				<div class="image-first">
-					<a href="combo-skin-tips.html"><img src="images/combo/combo-skin-tips.jpg"></a>
+					<a href="combo-skin-tips.html"><img src="images/combo/combo-skin-tips.jpg" alt="A lady looking to the left holding a serum wand"></a>
 				</div>
 				<div class="title">
 					<a href="combo-skin-tips.html" class="first">Tips for Combination Type Skin</a>
@@ -49,7 +53,7 @@
 				</div>
 
 				<div class="image">
-					<a href="choosing-cleanser.html"><img src="images/combo/choosing-cleanser.jpg"></a>
+					<a href="choosing-cleanser.html"><img src="images/combo/choosing-cleanser.jpg" alt="An unlabelled product bottle on a white background"></a>
 					
 				</div>
 				<div class="title">
