--- a/articles-4.html
+++ b/articles-4.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Sensitive Skin Articles</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -39,7 +43,7 @@
 				<!-- This is the category subheading that will change depending on which section of page user is on -->
 				<p class="subheading">Read articles dedicated to sensitive skin</p>
 				<div class="image-first">
-					<a href="tips-for-sensitive-skin.html"><img src="images/sensitive/tips-for-sensitive-skin.jpg"></a>
+					<a href="tips-for-sensitive-skin.html"><img src="images/sensitive/tips-for-sensitive-skin.jpg" alt="Half of a lady's face smiling with red cheeks"></a>
 				</div>
 				<div class="title">
 					<a href="tips-for-sensitive-skin.html" class="first">Tips for Sensitive Skin</a>
@@ -48,7 +52,7 @@
 				</div>
 
 				<div class="image">
-					<a href="help-sensitive-skin.html"><img src="images/sensitive/help-sensitive-skin.jpg"></a>
+					<a href="help-sensitive-skin.html"><img src="images/sensitive/help-sensitive-skin.jpg" alt="Unlabelled moisturiser with a leafy background"></a>
 					
 				</div>
 				<div class="title">
