--- a/choosing-cleanser.html
+++ b/choosing-cleanser.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Combination Skin Tips</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,7 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/Xwd2heDYy_A" frameborder="0" allowfullscreen></iframe>
                 </div>
+                <p class="credit">Video courtesy of Dr Dray on YouTube</p>
 
                 <p>Choosing the right cleanser that won't damage your skin barrier or dry out your cheeks can be difficult. The thing is,
                     combination skin doesn't require any special ingredients in your cleanser. In fact, it's better to pick a cleanser for
@@ -84,9 +89,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/combo/combo-skin-tips.jpg"></div>
-                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/combo/combo-skin-tips.jpg" alt="A lady looking to the left holding a serum wand"></div>
+                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg" alt="Moisturiser spread on a pink background"></div>
+                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
