--- a/clear-oily-skin.html
+++ b/clear-oily-skin.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Products for Oily Skin</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,8 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/l330tzUoR_I" frameborder="0" allowfullscreen></iframe>
                 </div>
+				<p class="credit">Video courtesy of Hyram on YouTube</p>
+
                 <p>Oily skin can be a pain! There are many other factors that come into play when dealing with oily skin such as hormones, the
 					environment we live in, and so on. So how can we possibly balance all these factors while maintaining a shine-free nose and 
 					forehead?
@@ -113,9 +119,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/acne.png"></div>
-                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/acne.png" alt="Lady covering half her face with acne"></div>
+                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></div>
+                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg" alt="Unlabelled skincare products with a flower and bar of soap"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
