--- a/combo-skin-tips.html
+++ b/combo-skin-tips.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Combination Skin Tips</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,8 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/NF21zKcKXwI" frameborder="0" allowfullscreen></iframe>
                 </div>
+				<p class="credit">Video courtesy of Dr Sam Bunting on YouTube</p>
+
                 <p>Shiny forehead and nose but dry cheeks? Well, you've likely got combination type skin. So what type of cleanser are you supposed
                     to use? One for oily skin or one for dry skin? Today we'll be giving a run down on some simple tips to help manage your
                     combination type skin.
@@ -91,9 +97,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/combo/choosing-cleanser.jpg"></div>
-                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/combo/choosing-cleanser.jpg" alt="An unlabelled product bottle on a white background"></div>
+                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg" alt="Moisturiser spread on a pink background"></div>
+                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
