--- a/dehydrated-vs-dry.html
+++ b/dehydrated-vs-dry.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Dehydrated vs Dry Skin</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,7 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/5cA6W2mDSA8" frameborder="0" allowfullscreen></iframe>
                 </div>
+				<p class="credit">Video courtesy of Hyram on YouTube</p>
 
                 <p>Many people get the term "dehydrated skin" confused with dry skin. Dehydrated skin is not a skin type like oily or dry skin.
                     It is actually a skin concern which can affect any skin type. Today we will teach you the difference between dehydrated 
@@ -102,9 +107,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/acne.png"></div>
-                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/acne.png" alt="Lady covering half her face with acne"></div>
+                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg" alt="Moisturiser spread on a pink background"></div>
+                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg" alt="Unlabelled skincare products with a flower and bar of soap"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
