--- a/fungal-acne.html
+++ b/fungal-acne.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>What Is Fungal Acne?</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,8 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/TJv3-2yYfvs" frameborder="0" allowfullscreen></iframe>
                 </div>
+				<p class="credit">Video courtesy of Hyram on YouTube</p>
+
                 <p>So you might be wondering, what are those tiny bumps resembling pimples on my forehead that never seem to go away?!
                 Those "pimples" are commonly known as fungal acne (pityrosporum folliculitis), although ironically it is not an actual type of acne.
                 So products targeted towards acne will not have the same effect on fungal acne.<br><br>Fungal acne is a type of
@@ -74,9 +80,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/acne.png"></div>
-                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/acne.png" alt="Lady covering half her face with acne"></div>
+                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></div>
+                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg" alt="Unlabelled skincare products with a flower and bar of soap"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
