--- a/help-dry-skin.html
+++ b/help-dry-skin.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Products for Oily Skin</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,8 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/tbwO2DnIbv0" frameborder="0" allowfullscreen></iframe>
                 </div>
+				<p class="credit">Video courtesy of Dr Dray on YouTube</p>
+
                 <p>When it comes to having dry skin, we need to be extra cautious about how we cleanse it, as many factors can cause damage to
                     the skin barrier such as using harsh soaps, or even just being exposed to water for too long, which is quite ironic. Water
                     making skin DRY? Well in fact, this opens up the skin barrier and leads to water loss and dryness. So how do we know what we
@@ -103,9 +109,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/dry/dehydrated-vs-dry.jpg"></div>
-                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/dry/dehydrated-vs-dry.jpg" alt="Half of a person's face with cracked mint coloured face mask"></div>
+                    <div class="flex-child"><img src="images/oily/moisturising-oily-skin.jpg" alt="Moisturiser spread on a pink background"></div>
+                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
