--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Skinclusive Home</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -34,7 +38,7 @@
 		<div class="wrapper">
 			<!-- This box contains the large image and text first seen on page -->
 			<div class="box1">
-				<img src="images/index_large.jpg">
+				<img src="images/index_large.jpg" alt="Image of six hands holding skincare products on pink background">
 				<h1>Skinclusive</h1>
 				<h2>inclusive of your skin.</h2>
 			</div>
@@ -57,14 +61,14 @@
 			
 			<!-- These are the boxes containing the two images side by side -->
 			<div class="left">
-				<img src="images/skinquiz.jpg">
+				<img src="images/skinquiz.jpg" alt="Lady with red hair holding a beauty tool">
 				<h1>New to skincare?</h1>
 				<p>Find out your skin type here</p>
 				<a href="quiz.html">TAKE THE QUIZ</a>
 			</div>
 			
 			<div class="right">
-				<img src="images/skinconcern.jpeg">
+				<img src="images/skinconcern.jpeg" alt="Lady with a towel on her head checking her skin">
 				<h1>Have a skin concern?</h1>
 				<p>Read more articles about common skin issues here</p>
 				<a href="articles-1.html">SKINCARE ARTICLES</a>
@@ -78,9 +82,9 @@
 			<div class="similar">
 				<!-- Flexbox to divide the three recommended articles easier-->
 				<div class="flex-container">
-					<div class="flex-child"><img src="images/fungal_acne.jpg"></div>
-					<div class="flex-child"><img src="images/acne.png"></div>
-					<div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
+					<div class="flex-child"><img src="images/fungal_acne.jpg" alt="Forehead with fungal acne"></div>
+					<div class="flex-child"><img src="images/acne.png" alt="Lady covering half her face with acne"></div>
+					<div class="flex-child"><img src="images/oily/clear-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></div>
 				</div>
 				
 				<!-- Flexbox to divide text evenly -->
