--- a/moisturising-oily-skin.html
+++ b/moisturising-oily-skin.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Moisturising Oily Skin</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,7 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/fEHEOGDzg_o" frameborder="0" allowfullscreen></iframe>
                 </div>
+				<p class="credit">Video courtesy of Hyram on YouTube</p>
 
                 <p>Moisturising your skin is an important in any skin care routine, really, yet it often goes misconceptualised. Many people
 					think that they don't need to moisturise because their skin will just produce oil again. Well, this is false! While your
@@ -81,9 +86,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/acne.png"></div>
-                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/dry/dehydrated-vs-dry.jpg"></div>
+                    <div class="flex-child"><img src="images/acne.png" alt="Lady covering half her face with acne"></div>
+                    <div class="flex-child"><img src="images/oily/clear-oily-skin.jpg" alt="Asian woman holding blue cloth smiling"></div>
+                    <div class="flex-child"><img src="images/dry/dehydrated-vs-dry.jpg" alt="Half of a person's face with cracked mint coloured face mask"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
