--- a/products-2.html
+++ b/products-2.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Dry Skin Products</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
