--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,10 @@
 		<title>Skin type Quiz</title>
 		<link rel="stylesheet" href="style.css"/>
         <script type="text/javascript" src="quiz.js"></script>
+		<link rel="icon" href="images/lotion.png"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -42,10 +46,10 @@
 						<h1>How does your skin typically feel in the morning?</h1>
 						<h2>1 / 5</h2>
 						<div class="choices">
-							<div class="choicebox"><img src="images/quiz/oily.png"><p><input type="radio" name="question1" value="Oily">Oily</p></div>
-							<div class="choicebox"><img src="images/quiz/dry.png"><p><input type="radio" name="question1" value="Dry">Dry</p></div>
-							<div class="choicebox"><img src="images/quiz/normal.png"><p><input type="radio" name="question1" value="Normal">Normal</p></div>
-							<div class="choicebox"><img src="images/quiz/sensitive.png"><p><input type="radio" name="question1" value="Sensitive">Sensitive</p></div>
+							<div class="choicebox"><img src="images/quiz/oily.png" alt="Water droplet"><p><input type="radio" name="question1" value="Oily">Oily</p></div>
+							<div class="choicebox"><img src="images/quiz/dry.png" alt="Cactus"><p><input type="radio" name="question1" value="Dry">Dry</p></div>
+							<div class="choicebox"><img src="images/quiz/normal.png" alt="Balanced scales"><p><input type="radio" name="question1" value="Normal">Normal</p></div>
+							<div class="choicebox"><img src="images/quiz/sensitive.png" alt="Pink feather"><p><input type="radio" name="question1" value="Sensitive">Sensitive</p></div>
 							<hr color="black" width="80%" size="3">
 						</div>
 					</div>
