--- a/tips-for-sensitive-skin.html
+++ b/tips-for-sensitive-skin.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Combination Skin Tips</title>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/lotion.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Skinclusive, skincare, skincare articles, skin type quiz">
+		<meta charset="UTF-8">
 	</head>
 
 	<body>
@@ -40,6 +44,7 @@
                 <div class="video">
                     <iframe width="985" height="480" src="https://www.youtube.com/embed/ABW-M4Iexis" frameborder="0" allowfullscreen></iframe>
                 </div>
+				<p class="credit">Video courtesy of Hyram on YouTube</p>
 
                 <p>Sensitive skin can be very painful and hard to deal with! So let's run down some tips on what you can do to help ease it a little more.                    
                 </p>
@@ -76,9 +81,9 @@
                 
                 <!-- Flexbox to divide the three recommended articles easier-->
                 <div class="flex-container">
-                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg"></div>
-                    <div class="flex-child"><img src="images/dry/dehydrated-vs-dry.jpg"></div>
-                    <div class="flex-child"><img src="images/sensitive/help-sensitive-skin.jpg"></div>
+                    <div class="flex-child"><img src="images/dry/help-dry-skin.jpg" alt="Unlabelled skincare products with a flower and bar of soap"></div>
+                    <div class="flex-child"><img src="images/dry/dehydrated-vs-dry.jpg" alt="Half of a person's face with cracked mint coloured face mask"></div>
+                    <div class="flex-child"><img src="images/sensitive/help-sensitive-skin.jpg" alt="Unlabelled moisturiser with a leafy background"></div>
                 </div>
                 
                 <!-- Flexbox to divide text evenly -->
